--- a/app/views/lecturenotes/edit.html.erb
+++ b/app/views/lecturenotes/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @lecturenote %> |
-<%= link_to 'Back', lecturenotes_path %>
+<%= link_to 'Show', [@course, @lecturenote] %> |
+<%= link_to 'Back', course_lecturenotes_path %>
