--- a/app/views/lecturenotes/index.html.erb
+++ b/app/views/lecturenotes/index.html.erb
@@ -15,13 +15,13 @@
     <td><%= lecturenote.title %></td>
     <td><%= lecturenote.content %></td>
     <td><%= lecturenote.course_id %></td>
-    <td><%= link_to 'Show', lecturenote %></td>
-    <td><%= link_to 'Edit', edit_lecturenote_path(lecturenote) %></td>
-    <td><%= link_to 'Destroy', lecturenote, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Show', [@course, lecturenote] %></td>
+    <td><%= link_to 'Edit', edit_course_lecturenote_path(@course, lecturenote) %></td>
+    <td><%= link_to 'Destroy', [@course, lecturenote], confirm: 'Are you sure?', method: :delete %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Lecturenote', new_lecturenote_path %>
+<%= link_to 'New Lecturenote', new_course_lecturenote_path %>
