--- a/app/views/lecturenotes/show.html.erb
+++ b/app/views/lecturenotes/show.html.erb
@@ -10,11 +10,5 @@
   <%= @lecturenote.content %>
 </p>
 
-<p>
-  <b>Course:</b>
-  <%= @lecturenote.course_id %>
-</p>
-
-
-<%= link_to 'Edit', edit_lecturenote_path(@lecturenote) %> |
-<%= link_to 'Back', lecturenotes_path %>
+<%= link_to 'Edit', edit_course_lecturenote_path(@course, @lecturenote) %> |
+<%= link_to 'Back', course_lecturenotes_path %>
