--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@assignment) do |f| %>
+<%= form_for([@course, @assignment]) do |f| %>
   <% if @assignment.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@assignment.errors.count, "error") %> prohibited this assignment from being saved:</h2>
@@ -22,10 +22,6 @@
   <div class="field">
     <%= f.label :duedate %><br />
     <%= f.text_field :duedate %>
-  </div>
-  <div class="field">
-    <%= f.label :course_id %><br />
-    <%= f.number_field :course_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
