Customized navigation bar and nested routes
Navigation bar made available only upon selecting a course, with routes
to syllabus, lecturenotes, assignments, and contactus all nested under
the selected course

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <b>Teacher:</b>
-  <%= @course.teacher_id %>
+  <%= @course.teacher.first_name %> <%= @course.teacher.last_name %>
 </p>
 
 
