--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,7 @@
 <footer class="footer">
-  <a href="#">About</a> - <a href="#">Contact Us</a> - <a href="#">Terms of Use</a>
+  <% if (@course == nil) %>	
+    <a href="#">About</a> - <a href="/contact">Contact Us</a> - <a href="#">Terms of Use</a>
+  <% else %>
+    <a href="#">About</a> - <%= link_to "Contact Us", [@course, @course.teacher] %> - <a href="#">Terms of Use</a>
+  <% end %>  
 </footer>
