Showcase of model migration
duedate field of assignments changed to date type, number field added to
courses
"rails generate migration RemoveDuedateFromAssignments duedate:string"
"rails generate migration AddDuedateToAssignments duedate:date"
"rails generate migration AddNumberToCourses number:string"
"rake db:migrate"

--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -12,6 +12,10 @@
   <% end %>
 
   <div class="field">
+    <%= f.label :number %><br />
+    <%= f.text_field :number %>
+  </div>
+  <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
   </div>
