--- a/app/views/assignments/_form.html.erb
+++ b/app/views/assignments/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :duedate %><br />
-    <%= f.text_field :duedate %>
+    <%= f.date_select :duedate %>
   </div>
   <div class="actions">
     <%= f.submit %>
