--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -13,6 +13,7 @@
 
 <% @courses.each do |course| %>
   <tr>
+  	<td><%= course.number %></td>
     <td><%= course.title %></td>
     <td><%= course.description %></td>
     <td><%= course.syllabus %></td>
