--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <b>Number:</b>
+  <%= @course.number %>
+</p>
+
+<p>
   <b>Title:</b>
   <%= @course.title %>
 </p>
