--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -1,23 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>First name:</b>
-  <%= @teacher.first_name %>
-</p>
+<div class="row">
+  <%= gravatar_for(@teacher) %> 
+</div>
 
 <p>
-  <b>Last name:</b>
-  <%= @teacher.last_name %>
-</p>
-
-<p>
-  <b>Office:</b>
-  <%= @teacher.office %>
+  <b>Name:</b>
+  <%= @teacher.first_name %> <%= @teacher.last_name.upcase %>
 </p>
 
 <p>
   <b>Email:</b>
   <%= @teacher.email %>
+</p>
+
+<div id="map"></div>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="https://raw.github.com/jbdemonte/gmap3/master/gmap3.js"></script>
+<script type="text/javascript">
+  $('#map').width("400px").height("250px").gmap3({
+    map: { options: { maxZoom:17 } },
+    marker: {address: "<%= @teacher.office %>" }
+  }, "autofit" );
+</script>
+
+<p>
+  <b>Office:</b>
+  <%= @teacher.office %>
 </p>
 
 
