Students connected to courses by many-to-many
"rails generate migration CreateCoursesStudents"
"rake db:migrate"
enhanced with students#courses, students#course_add,
students#course_remove, and courses#roll, the last of which added to the
navigation bar

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,10 +2,15 @@
 
 <table>
   <tr>
+    <th>Number</th>
     <th>Title</th>
     <th>Description</th>
     <th>Syllabus</th>
     <th>Teacher</th>
+    <th>Enrolled</th>    
+    <th></th>
+    <th></th>
+    <th></th>
     <th></th>
     <th></th>
     <th></th>
@@ -17,7 +22,8 @@
     <td><%= course.title %></td>
     <td><%= course.description %></td>
     <td><%= course.syllabus %></td>
-    <td><%= course.teacher_id %></td>
+    <td><%= course.teacher.first_name %> <%= course.teacher.last_name.upcase %></td>
+    <td><%= course.students.count %></td>
     <td><%= link_to 'Show', course %></td>
     <td><%= link_to 'Edit', edit_course_path(course) %></td>
     <td><%= link_to 'Destroy', course, confirm: 'Are you sure?', method: :delete %></td>
