--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -5,6 +5,8 @@
     <th>First name</th>
     <th>Last name</th>
     <th>Email</th>
+    <th>Courses</th>
+    <th></th>
     <th></th>
     <th></th>
     <th></th>
@@ -15,6 +17,7 @@
     <td><%= student.first_name %></td>
     <td><%= student.last_name %></td>
     <td><%= student.email %></td>
+    <td><%= student.courses.count %></td>    
     <td><%= link_to 'Show', student %></td>
     <td><%= link_to 'Edit', edit_student_path(student) %></td>
     <td><%= link_to 'Destroy', student, confirm: 'Are you sure?', method: :delete %></td>
