--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -27,4 +27,5 @@
 
 
 <%= link_to 'Edit', edit_course_path(@course) %> |
+<%= link_to 'Roll', roll_course_path(@course) %> |
 <%= link_to 'Back', courses_path %>
