--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -11,9 +11,6 @@
     <th></th>
     <th></th>
     <th></th>
-    <th></th>
-    <th></th>
-    <th></th>
   </tr>
 
 <% @courses.each do |course| %>
@@ -25,12 +22,18 @@
     <td><%= course.teacher.first_name %> <%= course.teacher.last_name.upcase %></td>
     <td><%= course.students.count %></td>
     <td><%= link_to 'Show', course %></td>
+    <% if current_user.class.name == "Admin" %>
     <td><%= link_to 'Edit', edit_course_path(course) %></td>
     <td><%= link_to 'Destroy', course, confirm: 'Are you sure?', method: :delete %></td>
+    <% else %>
+      <td></td><td></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
 
 <br />
 
+<% if current_user.class.name == "Admin" %>
 <%= link_to 'New Course', new_course_path %>
+<% end %>
